--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "connections-archive-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://RaySzczepanski.github.io/connections-archive-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,13 +12,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
