--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connections-archive-app",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://RaySzczepanski.github.io/connections-archive-app",
+  "homepage": "https://rayszczepanski.github.io/connections-archive-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
